[package]
name = "reverie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.1", features = ['linked', 'debug'] }
winit = "0.27.5"
anyhow = "1.0.68"
ash-window = "0.11.0"
vk-shader-macros = { version = "0.2.8", features = ['build-from-source'] }
memoffset = "0.8.0"
gpu-allocator = "0.21.0"
log = "0.4.17"
simple_logger = "4.0.0"